MODON MRE BPDEV/force-app/main/default/objects/Farvision_API_Configuration__c/Farvision_API_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Created to store farvision api data</description>
    <label>Farvision API Configuration</label>
</CustomObject>