MODON MRE BPDEV/force-app/main/default/objects/Farvision_API_Configuration__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>