MODON MRE BPDEV/force-app/main/default/objects/Farvision_API_Configuration__c/fields/Token_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Token_Endpoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Token Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>