MODON MRE BPDEV/force-app/main/default/objects/Farvision_API_Configuration__c/fields/Token_Timespan_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Token_Timespan_Minutes__c</fullName>
    <label>Token Timespan (Minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>